{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2c2ca133-6cf4-4951-9b59-2d6f2afb2e03",
            "actions": [
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "58dd6df0-b416-4f5d-8ccd-6ad916f69046",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "54d3ffbd-181a-40e9-a456-5344160f33ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ef5e653-b11c-4cf9-9697-2b4fa944630b",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aad02d6e-b149-4051-9a16-631ddba43fa6",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}